--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,10 @@ body {
 }
 
 .location {
-    font-size: 16px;
+	font-size: 16px;
     font-weight: bold;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     text-align: center;
+    white-space: nowrap;
 }
